# sh.net.br

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  setup.sh
scripts/: test.sh
src/: auth.rs  cert.rs  gpg.rs  main.rs  templates.rs
